name:                scheme
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/uruk1993/scheme#readme
license:             BSD3
license-file:        LICENSE
author:              HarumiKiyama
maintainer:          lucius0720@hotmail.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable scheme
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
